--- a/composer.json
+++ b/composer.json
@@ -5,9 +5,7 @@
     "homepage": "https://github.com/carlosbuenosvinos/php-kata",
     "type": "library",
     "require-dev": {
-        "phpunit/phpunit": "5.5.*@dev",
-        "mockery/mockery": "dev-master@dev",
-        "phpspec/phpspec": "3.0.*@dev"
+        "phpunit/phpunit": "7.3.4"
     },
     "license": "MIT",
     "authors": [
